--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -27,7 +27,10 @@ jobs:
       working-directory: ./DotnetTemplate.Web
 
     - name: Build image
-      run: docker build tag module8 .
+      run: docker build --tag module8 .
+
+    - name: Login to Docker Hub
+      run: docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
 
     - name: Tag image
       run: docker tag module8 cuffindall/module8
