--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,8 +2,7 @@ name: Continuous Integration
 on: [push]
 
 jobs:
-  build:
-    name: Build, test and push to Docker
+  ci:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -26,6 +25,10 @@ jobs:
       run: npm run test
       working-directory: ./DotnetTemplate.Web
 
+  cd:
+    runs-on: ubuntu-latest
+    needs: [ci]
+    steps:
     - name: Build Docker image
       run: docker build --tag module8 .
 
