--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -29,6 +29,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ci]
     steps:
+    - uses: actions/checkout@v2
+
     - name: Build Docker image
       run: docker build --tag module8 .
 
