--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 on: [push]
 
 jobs:
-  ci:
+  CI_Build_And_Test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -25,9 +25,9 @@ jobs:
       run: npm run test
       working-directory: ./DotnetTemplate.Web
 
-  cd:
+  CD_Docker_Hub:
     runs-on: ubuntu-latest
-    needs: [ci]
+    needs: [CI_Build_And_Test]
     steps:
     - uses: actions/checkout@v2
 
