--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -26,7 +26,7 @@ jobs:
       working-directory: ./DotnetTemplate.Web
 
   CD_Docker_Hub:
-    if: ${{ git.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: [CI_Build_And_Test]
     steps:
