--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -43,3 +43,15 @@ jobs:
 
     - name: Publish to Docker Hub
       run: docker push cuffindall/module8
+
+  Deploy_Heroku:
+    runs-on: ubuntu-latest
+    needs: [CD_Docker_Hub]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_TOKEN}}
+          heroku_app_name: "cu-module8" #Must be unique in Heroku
+          heroku_email: "craig.uffindall@necsws.com"
+          usedocker: true
