--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -55,3 +55,4 @@ jobs:
           heroku_app_name: "cu-module8" #Must be unique in Heroku
           heroku_email: "craig.uffindall@necsws.com"
           usedocker: true
+      - run: curl --fail https://cu-module8.herokuapp.com//health
